force-app/main/default/objects/Booking_Form__c/Booking_Form__c.object-meta.xml
<CustomObject>
    <description>Used on puppet shows to collect more information from schools/families for performances.</description>
    <label>Booking Form</label>
    <nameField>
        <label>Booking Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Form</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>