force-app/main/default/objects/Booking_Form__c/fields/Is_the_school_open_to_media__c.field-meta.xml
<CustomField>
    <fullName>Is_the_school_open_to_media__c</fullName>
    <label>Is the school open to media?</label>
    <type>TextArea</type>
</CustomField>