force-app/main/default/objects/Booking_Form__c/fields/KICC_students__c.field-meta.xml
<CustomField>
    <fullName>KICC_students__c</fullName>
    <inlineHelpText>Students impacted by parents/carers cancer diagnosis</inlineHelpText>
    <label>KICC students?</label>
    <type>TextArea</type>
</CustomField>