force-app/main/default/objects/Booking_Form__c/fields/Puppet_Show__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show__c</fullName>
    <inlineHelpText>Puppet show the booking form is related to</inlineHelpText>
    <label>Puppet Show</label>
    <referenceTo>PuppetShow__c</referenceTo>
    <relationshipLabel>Booking Form</relationshipLabel>
    <relationshipName>Booking_Form</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>