force-app/main/default/objects/Booking_Form__c/fields/School_interested_in_fundraising__c.field-meta.xml
<CustomField>
    <fullName>School_interested_in_fundraising__c</fullName>
    <label>School interested in fundraising?</label>
    <type>TextArea</type>
</CustomField>