force-app/main/default/objects/Booking_Form__c/fields/Session_3_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_3_Start_Time__c</fullName>
    <label>Session 3 Start Time</label>
    <type>TextArea</type>
</CustomField>