force-app/main/default/objects/Booking_Form__c/fields/Show_Date_2nd_Preference__c.field-meta.xml
<CustomField>
    <fullName>Show_Date_2nd_Preference__c</fullName>
    <label>Show Date 2nd Preference</label>
    <type>Date</type>
</CustomField>