force-app/main/default/objects/Booking_Form__c/fields/Students_with_cancer__c.field-meta.xml
<CustomField>
    <fullName>Students_with_cancer__c</fullName>
    <label>Students with cancer?</label>
    <type>TextArea</type>
</CustomField>