force-app/main/default/objects/Booking_Form__c/fields/Students_with_illness_cobditions__c.field-meta.xml
<CustomField>
    <fullName>Students_with_illness_cobditions__c</fullName>
    <label>Students with illness/cobditions?</label>
    <type>TextArea</type>
</CustomField>