force-app/main/default/objects/Booking_Form__c/fields/Traditional_Custodians_details__c.field-meta.xml
<CustomField>
    <fullName>Traditional_Custodians_details__c</fullName>
    <label>Traditional Custodians details</label>
    <type>TextArea</type>
</CustomField>