force-app/main/default/objects/Booking_Form__c/fields/Venue_details__c.field-meta.xml
<CustomField>
    <fullName>Venue_details__c</fullName>
    <label>Venue details</label>
    <type>TextArea</type>
</CustomField>